# LPCE

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  pipeline.md  pyproject.toml
dagster_pipeline/: repository.py
dagster_pipeline/pipelines/: extraction_pipeline.py  junk_removal_pipeline.py
dagster_pipeline/pipelines/ops/: cleanup_ops.py  decompression_ops.py  extraction_ops.py  water_removal_ops.py
dagster_pipeline/tmpdk0e_zvo/history/: runs.db
dagster_pipeline/tmpdk0e_zvo/history/runs/: 337c9de2-3f87-4d6a-94ea-c243784f9859.db  3f1b1662-d3ce-46b8-8e56-07663f251082.db  731da483-cef8-4c30-b7b8-f7744d3e1adc.db  index.db
dagster_pipeline/tmpdk0e_zvo/schedules/: schedules.db
data/: .syncthing.identical_groups.json.tmp  .syncthing.removed_files_tests.json.tmp  filtered_ligands.json  grouped_complexes.json  hetatm_distribution.json  hetatm_types_distribution.csv  removed_files_tests.json  removed_ligands_summary.json  site_info.json  trash_ligands.json  trash_ligands_ion.json  trash_ligands_mini.json  trash_ligands_no.json
lpce/: run_cleanup_pipeline.py  run_full_pipeline.py
lpce/cleanup/: filter_ligands.py  remove_dna_rna.py  remove_empty_structures.py  remove_junk_ligands.py  remove_multiple_models.py  remove_water  remove_water.c  remove_water.py
lpce/config/: BindingMOAD.yaml  PDBBind.yaml  config.yaml  config_no_trash.yaml  config_trash_mini.yaml  settings.py
lpce/extraction/: convert_pdb_to_smiles_sdf.py  decompress_files.py  extract_complexes.py  parse_dict.py
lpce/notifications/: send_email.py
lpce/pdb_manipulations/: .syncthing.protein_ligand_separator.py.tmp  __init__.py  add_h_to_ligands.py  clash_ligands.py  foldseek.py  protein_ligand_separator.py  remove_not_buried_ligands.py  remove_similar_structures.py  split2file.py  split_bioml.py
lpce/tests/: __init__.py  conftest.py  test_pipeline.py  test_run_full_pipeline.py
lpce/utils/: calc_descriptors.py  clean_names.py  sdf2df.py  send_email.py  test_utils.py  utils.py
notebook/: 1.py  1out.pdb1  2.py  PDBBind_cleaner.ipynb  interface_ligands.ipynb  is_ligand_buried.ipynb  lig_eda.ipynb  lig_pocket_intersect.ipynb  ligand_eda.ipynb  make_buried.ipynb  misato.ipynb  pdb_fix.ipynb  protein_ligand_separator.ipynb  remove_similar.ipynb  sim_check.ipynb  split_to_biomol.ipynb  test.ipynb  trash_ligands.ipynb
outputs/2024-09-30/19-29-11/.hydra/: config.yaml  hydra.yaml
paper/: paper.md  pipeline.md
scripts/: calc_descriptors.py  decompress_pdb_files.py  extract_complexes.py  remove_water.py  sdf2df.py  smi2df.py
(+3 files in other folders)
