[project]
name = "lpce"
version = "0.1.0"
description = "Ligand-protein complex extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.85",
    "build>=1.2.2.post1",
    "hydra-core>=1.3.2",
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
    "twine>=6.1.0",
    "uv>=0.6.16",
    "yagmail>=0.15.293",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lpce"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.uv.sources]
lpce = { workspace = true }

[dependency-groups]
dev = [
    "lpce",
]


[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest", "requests"]

[tool.ruff]
src = ["src"]
extend-exclude = ["conf.py"]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "ANN101",  # "missing-type-self"
    "RET504",  # Unnecessary assignment to `x` before `return` statementRuff
    "S101",    # Use of `assert` detected
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "PT001",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "FBT001",
    "FBT002",
    "PLR0913", # Too many arguments to init (> 5)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]
"scripts/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "regression",
]